# nostr-merchant

./: .env.example  .gitignore  README.md  pyproject.toml  smoke.sh
src/llmops_agent/: __init__.py  agent.py  audit.py  budget.py  cli.py  config.py  mcp_servers.py
src/llmops_agent/workflows/: __init__.py  research.py
src/nostr_merchant/: __init__.py  agent.py  audit.py  budget.py  cli.py  config.py
src/nostr_merchant/workflows/: __init__.py  engagement.py  research.py
tests/: test_agent.py  test_audit.py  test_budget.py  test_cli.py  test_config.py  test_engagement.py  test_schema_compat.py
